--- a/litreview.bib
+++ b/litreview.bib
@@ -1138,3 +1138,34 @@
     year={2012},
     publisher={VLDB Endowment}
 }
+
+@misc{scott2016,
+    title  = "Stream Processing Everywhere: What to Use?",
+    author = "Jim Scott",
+    url    = \url{http://engineering.purdue.edu/~mark/puthesis},
+    howpublished = {\url{http://engineering.purdue.edu/~mark/puthesis}},
+    year   = "2016"
+}
+
+@misc{storm,
+    title  = {Apache {Storm}},
+    howpublished = {\url{http://storm.apache.org/}},
+}
+
+@misc{ballou2014,
+    title  = Apache Storm vs. Apache Spark,
+    author = Kennyu Ballou,
+    url    = \url{http://zdatainc.com/2014/09/apache-storm-apache-spark/},
+    howpublished = {\url{http://zdatainc.com/2014/09/apache-storm-apache-spark/}},
+    year   = "2014"
+}
+
+@inproceedings{toshniwal2014storm,
+    title={Storm@ twitter},
+    author={Toshniwal, Ankit and Taneja, Siddarth and Shukla, Amit and Ramasamy, Karthik and Patel, Jignesh M and Kulkarni, Sanjeev and Jackson, Jason and Gade, Krishna and Fu, Maosong and Donham, Jake and others},
+    booktitle={Proceedings of the 2014 ACM SIGMOD international conference on Management of data},
+    pages={147--156},
+    year={2014},
+    organization={ACM}
+}
+
