--- a/litreview.bib
+++ b/litreview.bib
@@ -1169,3 +1169,19 @@
     organization={ACM}
 }
 
+@misc{impala,
+    title  = {Apache {Impala}},
+    howpublished = {\url{https://impala.apache.org}},
+}
+
+@inproceedings{kornacker2015impala,
+    title={Impala: A Modern, Open-Source SQL Engine for Hadoop.},
+    author={Kornacker, Marcel and Behm, Alexander and Bittorf, Victor and Bobrovytsky, Taras and Ching, Casey and Choi, Alan and Erickson, Justin and Grund, Martin and Hecht, Daniel and Jacobs, Matthew and others},
+    booktitle={CIDR},
+    volume={1},
+    pages={9},
+    year={2015}
+}
+
+
+
