--- a/litreview.bib
+++ b/litreview.bib
@@ -447,7 +447,7 @@
 	author={Destiche, Aurielle}} 
 
 @misc{medicaid, 
-	title={FraudPreventionToolkit}, url={https://www.cms.gov/Outreach-and-Education/Outreach/Partnerships/FraudPreventionToolkit.html}, 
+	title={{Medicaid} Fraud Prevention Toolkit}, howpublished={\url{https://www.cms.gov/Outreach-and-Education/Outreach/Partnerships/FraudPreventionToolkit.html}}, 
 	journal={Centers for Medicare & Medicaid Services}}
 
 @article{ibm_healthcare, 
@@ -728,9 +728,13 @@
 }
 
 
-@misc{design-voldemort, title={Design}, url={http://www.project-voldemort.com/voldemort/design.html}, journal={Design - Voldemort}} 
+@misc{design-voldemort, 
+    title={{Voldemort} Design}, 
+    howpublished={\url{http://www.project-voldemort.com/voldemort/design.html}}, 
+    journal={Design - Voldemort}} 
 
-@misc{hadoop-ecosystem, title={Hadoop}, url={https://hadoopecosystemtable.github.io/}} 
+@misc{hadoop-ecosystem, title={Hadoop}, 
+    howpublished={\url{https://hadoopecosystemtable.github.io/}}} 
 
 @article{howard_scale_1988,
     title = {Scale and performance in a distributed file system},
@@ -1153,15 +1157,14 @@
 }
 
 @misc{ballou2014,
-    title  = Apache Storm vs. Apache Spark,
-    author = Kennyu Ballou,
-    url    = \url{http://zdatainc.com/2014/09/apache-storm-apache-spark/},
+    title  = {Apache Storm vs. Apache Spark},
+    author = {Kennyu Ballou},
     howpublished = {\url{http://zdatainc.com/2014/09/apache-storm-apache-spark/}},
     year   = "2014"
 }
 
 @inproceedings{toshniwal2014storm,
-    title={Storm@ twitter},
+    title={Storm at Twitter},
     author={Toshniwal, Ankit and Taneja, Siddarth and Shukla, Amit and Ramasamy, Karthik and Patel, Jignesh M and Kulkarni, Sanjeev and Jackson, Jason and Gade, Krishna and Fu, Maosong and Donham, Jake and others},
     booktitle={Proceedings of the 2014 ACM SIGMOD international conference on Management of data},
     pages={147--156},
