--- a/litreview.tex
+++ b/litreview.tex
@@ -932,6 +932,15 @@ Flink supports efficient distributed checkpointing to provide fault tolerance. R
 %Hive\cite{thusoo2009hive} is an Apache project for warehousing huge amounts of data on HDFS. Hive provides an SQL like language called \textit{HiveQL} that converts queries into MapReduce, Apache Tez, or Apache Spark jobs. Hive has built-in support for operating on compressed data.
 
 \section{Conclusion}\label{sec:conclusion}
+This review looked at management of large-scale distributed data with an emphasis on big data collected from distributed sensor networks. 
+
+In section \ref{sec:big-sensor-data}, we examined the properties of big data and looked at what makes big data unique in comparison to other types of data. We examines several definitions of big data including the 4 V's. We looked at specific features of big data and described several examples of big data.
+
+Section \ref{sec:cloud-computing} introduced the topics of cloud computing and how cloud computing and big data tie in together. We examined cloud computing service models and looked at several service models that were designed specifically for sensor data management. We ended this section by reviewing mobile cloud computing and a list of issues that currently face cloud computing.
+
+We focused on the distributed storage of big data in section \ref{sec:big-data-persistence-models} examining distributed file systems, and persistence models such as key-value, column, document, and graph storage systems and examined the key characteristics of each storage system.
+
+Finally, in section \ref{sec:big-data-analytics}, we looked at different frameworks that are capable of handling distributed data and performing analytics on large scale distributed data.
 
 \bibliography{litreview}
 \bibliographystyle{plain}
