Review of KV stores and DFS

--- a/litreview.bib
+++ b/litreview.bib
@@ -1186,5 +1186,13 @@
     year={2015}
 }
 
-
+@article{khalidcomparison,
+    title={Comparison of Distributed File Systems},
+    author={Khalid, Tuba},
+    year={2016}
+    journal={FAST-NU Research Journal (FRJ)}
+    volume={2}
+    number={1}
+    pages={8}
+}
 
