--- a/litreview.tex
+++ b/litreview.tex
@@ -656,7 +656,37 @@ Even though SimpleDB provides a rather \textit{simple} data model, it's provided
 \subsubsection{Comparison of Document Stores}
 In the previous sections we reviewed MongoDB, CouchDB, and SimpleDB. This section will provide brief comparisons and contrasts between these document databases.
 
-MongoDB provides access to its data store in the form of multiple APIs for many different programming languages. CouchDB and SimpleDB provide an HTTP interface for access.
+MongoDB provides access to its data store in the form of multiple APIs for many different programming languages. CouchDB and SimpleDB provide an HTTP interface for access. MongoDB has very rich querying capabilities compared to both CouchDB and SimpleDB. MongoDB always provides a very large array of index types compared to the other document databases we reviewed. Unlike MongoDB and CouchDB, SimpleDB does not support nested documents. CouchDB has very fast range queries due to the way it stores data in a B-Tree.
+
+\begin{table}
+    \begin{adjustbox}{center} 
+        \begin{tabulary}{1.3\linewidth}{|c|L|L|L|}
+            \hline 
+            \textbf{Feature / KV} & \textbf{MongoDB} & \textbf{CouchDB} & \textbf{SimpleDB} \\
+            \hline 
+            \textbf{Consistency} & Eventual (atomic at document level) & Eventual & Eventual  (Atomic at rows)\\ 
+            \hline 
+            \textbf{Indexing} & Primary, single field, compound, multikey, geospatial, text, hashed, partial, sparse, TTL, covered & Local, global, secondary, MapReduce views, geospatial, test & Defined through domains\\ 
+            \hline 
+            \textbf{Query Language} & Multiple APIs & HTTP / JavaScript & HTTP / SimpleDB Query Language\\
+            \hline 
+            \textbf{Nested Documents} & Yes & Yes & No \\
+            \hline
+            \textbf{Availability} & High / Replica sets & High & High \\ 
+            \hline 
+            \textbf{Replication} & Sharding & Full duplication & Async replication  \\ 
+            \hline 
+            \textbf{Operations} & gets, puts, updates, rich queries & gets, puts, range queries, updates & selects, deletes, getAttributes, putAttributes \\ 
+            \hline 
+            \textbf{Versioning} & No & Yes & No \\ 
+            \hline 
+        \end{tabulary} 
+    \end{adjustbox}
+    \caption{Comparison of column stores}
+    \label{table:document-comparison}
+\end{table}
+
+The main features of these document databases are compared in table \ref{table:document-comparison}.
 
 \subsection{Graph}\label{ssec:graph}
 Graph databases are unique in the way that they store and relate data. Graph databases specialize in efficiently managing heavily linked data\cite{cattell_scalable_2011}.
